manifests/skychat/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skychat-api
spec:
  template:
    spec:
      containers:
      - name: app

      volumes:
      - name: secrets
        secret:
          secretName: admin-credential
