manifests/skychat/api-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skychat-api-fe
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "60"
    kubernetes.io/ingress.class: internet
    cert-manager.io/cluster-issuer: letsencrypt-issuer

spec:
  tls:
  - hosts:
    - api.skychat.app
    secretName: tls-api.skychat.app

  rules:
  - host: api.skychat.app
    http: &http_rules
      paths:
      - path: /
        backend:
          serviceName: dustjs-backend-firebase
          servicePort: 80
